Documented jlink parts and added mymods directory